swiper_in_mein_news_reinit

--- a/src/__news.pug
+++ b/src/__news.pug
@@ -108,19 +108,8 @@ mixin blogSlider
               .blogSlider-slideInner
                 a.blogSliderItem(href="#")
                   .blogSliderItem__cover 
-                    .blogSliderItem__coverVideo.videoBox_i
-                      iframe(width='560' height='315' src='https://www.youtube.com/embed/YCF6qjf1-h8' autoplay='1' frameborder='0' allow='accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
-                    //- .blogSliderItem__coverImg
-                    //-   .blogSliderItem__coverImgInner(style="background-image: url(assets/img/before-after/01.jpg)")
-                  .blogSliderItem__info 
-                    .blogSliderItem__title Дорогие друзья, передаём Вам новогодний привет!
-                    .blogSliderItem__date 30.12.2020
-            .swiper-slide.blogSlider-slide
-              .blogSlider-slideInner
-                a.blogSliderItem(href="#")
-                  .blogSliderItem__cover 
                     .blogSliderItem__coverImg
-                      .blogSliderItem__coverImgInner(style="background-image: url(assets/img/before-after/01.jpg)")
+                      .blogSliderItem__coverImgInner(style="background-image: url(assets/img/blog/01.jpg)")
                   .blogSliderItem__info 
                     .blogSliderItem__title Дорогие друзья, передаём Вам привет и поздравления от наших докторов!
                     .blogSliderItem__date 30.12.2020
@@ -128,8 +117,20 @@ mixin blogSlider
               .blogSlider-slideInner
                 a.blogSliderItem(href="#")
                   .blogSliderItem__cover 
+                    .blogSliderItem__coverVideo.videoBox_i
+                      iframe(width='560' height='315' src='https://www.youtube.com/embed/YCF6qjf1-h8' autoplay='1' frameborder='0' allow='accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+                    //- .blogSliderItem__coverImg
+                    //-   .blogSliderItem__coverImgInner(style="background-image: url(assets/img/before-after/01.jpg)")
+                  .blogSliderItem__info 
+                    .blogSliderItem__title Дорогие друзья, передаём Вам новогодний привет!
+                    .blogSliderItem__date 30.12.2020
+            
+            .swiper-slide.blogSlider-slide
+              .blogSlider-slideInner
+                a.blogSliderItem(href="#")
+                  .blogSliderItem__cover 
                     .blogSliderItem__coverImg
-                      .blogSliderItem__coverImgInner(style="background-image: url(assets/img/before-after/01.jpg)")
+                      .blogSliderItem__coverImgInner(style="background-image: url(assets/img/blog/02.jpg)")
                   .blogSliderItem__info 
                     .blogSliderItem__title Дорогие друзья, передаём Вам новогодний привет и поздравления от наших докторов!
                     .blogSliderItem__date 30.12.2020
@@ -138,7 +139,7 @@ mixin blogSlider
                 a.blogSliderItem(href="#")
                   .blogSliderItem__cover 
                     .blogSliderItem__coverImg
-                      .blogSliderItem__coverImgInner(style="background-image: url(assets/img/before-after/01.jpg)")
+                      .blogSliderItem__coverImgInner(style="background-image: url(assets/img/blog/03.jpg)")
                   .blogSliderItem__info 
                     .blogSliderItem__title Дорогие друзья, передаём Вам новогодний привет и поздравления от наших докторов!
                     .blogSliderItem__date 30.12.2020
