--- a/src/index.pug
+++ b/src/index.pug
@@ -46,6 +46,10 @@ html(lang="ru-RU")
       //- +wideBlock
       //- +mainBox
       +mainContent
+      .wideBox3__area 
+        .wideBox3
+          .title3
+              h2 Блог нашего центра
       +blogSlider
       //- +newsInMain
       //- +zBlock1
