--- a/src/assets/css/commons.css
+++ b/src/assets/css/commons.css
@@ -310,8 +310,7 @@
   margin: -33px 0 0 -33px;
   width: 66px;
   height: 66px;
-  background: transparent url("../img/loader.gif") no-repeat scroll center
-    center;
+  background: transparent url("../img/loader.gif") no-repeat scroll center center;
 }
 
 .toTop {
@@ -327,7 +326,7 @@
   /* border-radius: 50%; */
   width: 3rem;
   height: 3rem;
-  background: #c24b35;
+  background: #d74d63;
   transition: all 0.3s;
 }
 
