--- a/src/index.pug
+++ b/src/index.pug
@@ -51,11 +51,12 @@ html(lang="ru-RU")
           .title3
               h2 Блог нашего центра
       +blogSlider
+      +mainForm_v3
       //- +newsInMain
       //- +zBlock1
 
     .site__footer
-      +footer 
+      +footer3 
 
 
     +topMenuAdaptive
