--- a/src/__forms.pug
+++ b/src/__forms.pug
@@ -52,6 +52,36 @@ mixin zBlock3
           button.submit13(type='submit', name='submit13')
             | Записаться
 
+mixin mainForm_v3
+  .mainForm3__area
+    .mainForm3
+      .mainForm3__left
+        .mainForm3__intro
+          h2 Запишитесь прямо сейчас на консультацию
+          span по телефону 
+            a(href='tel:+78452260000') +7 (8452) 26-00-00
+          span или заполните форму ниже:
+        form.form_m3(action='#')
+          label(for="name_m3") Ваше имя
+          input.name_m3(name='name_m3', type='text', placeholder='')
+
+          label(for="phone_m3") Ваш телефон
+          input.phone13(name='phone_m3', type='text', placeholder='')
+          //- input.email_m3(name='email_m3', type='text', placeholder='Email')
+          input.work_email_m3(name='work_email_m3', type='text', placeholder='Рабочий email')
+          //- textarea.message_m3(name='message_m3', cols='30', rows='10', placeholder='Ваше сообщение')
+          //- .form_m3__text
+          //-   | *Отправляя сообщение Вы соглашаетесь с условиями 
+          //-   a(href='privacy-policy/', target='_blank')
+          //-     | политики
+          //-     | конфиденциальности
+          .form_m3alrightBox
+            input.checkbox_m3(type='checkbox' required='')
+            span Согласен на обработку персональных данных
+          button.submit_m3(type='submit', name='submit_m3')
+            | Записаться
+      .mainForm3__right(style="background-image: url(assets/img/formbg.jpg)")
+
 mixin formInMaster
   .form2__area
     .form2__intro 
