--- a/src/__mainBox.pug
+++ b/src/__mainBox.pug
@@ -83,7 +83,7 @@ mixin mainContent
             h2 Бьюти Лаунж
             p Центр косметологии и красоты БЬЮТИ ЛАУНЖ - ваш надежный проводник в мире красоты, здоровья и долголетия! Философия нашего Центра - это персонифицированный индивидуальный подход к каждому Гостю!
             p В Центре косметологии и красоты БЬЮТИ ЛАУНЖ гармонично сочетают высокий профессионализм, разумный подход к красоте и здоровью, и главное, желание творить!
-          a.mainContent__redmore(href="#") Узнать о нас больше 
+          //- a.mainContent__redmore(href="#") Узнать о нас больше 
         .mainContent__right
           img(src="assets/img/img-bg-about_main2.jpg", alt="")
           
