--- a/src/__news.pug
+++ b/src/__news.pug
@@ -149,3 +149,4 @@ mixin blogSlider
         //-   i.icon-arr-left1
         //- .blogSlider__right
         //-   i.icon-arr-right1
+      a.mainNews__redmore(href="")  Узнать о нас больше
