--- a/src/assets/css/__news_media.css
+++ b/src/assets/css/__news_media.css
@@ -71,6 +71,9 @@
   .blogSlider__pagination {
     display: flex;
   }
+  .mainNews__redmore {
+    margin: 30px 0 20px;
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -94,6 +97,9 @@
   }
   .blogSliderItem__title {
     margin-bottom: 10px;
+  }
+  .mainNews__redmore {
+    margin: 20px 0 0;
   }
 }
 
