--- a/src/__forms.pug
+++ b/src/__forms.pug
@@ -54,7 +54,7 @@ mixin zBlock3
 
 mixin mainForm_v3
   .mainForm3__area
-    .mainForm3
+    .mainForm3(style="background-image: url(assets/img/formbg.jpg)")
       .mainForm3__left
         .mainForm3__intro
           h2 Запишитесь прямо сейчас на консультацию
@@ -66,7 +66,7 @@ mixin mainForm_v3
           input.name_m3(name='name_m3', type='text', placeholder='')
 
           label(for="phone_m3") Ваш телефон
-          input.phone13(name='phone_m3', type='text', placeholder='')
+          input.phone_m3(name='phone_m3', type='text', placeholder='')
           //- input.email_m3(name='email_m3', type='text', placeholder='Email')
           input.work_email_m3(name='work_email_m3', type='text', placeholder='Рабочий email')
           //- textarea.message_m3(name='message_m3', cols='30', rows='10', placeholder='Ваше сообщение')
@@ -80,7 +80,7 @@ mixin mainForm_v3
             span Согласен на обработку персональных данных
           button.submit_m3(type='submit', name='submit_m3')
             | Записаться
-      .mainForm3__right(style="background-image: url(assets/img/formbg.jpg)")
+      .mainForm3__right
 
 mixin formInMaster
   .form2__area
