--- a/src/assets/css/__forms_media.css
+++ b/src/assets/css/__forms_media.css
@@ -30,6 +30,9 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .mainForm3 {
+    background: none !important;
+  }
   .zBlock1__intro {
     text-align: center;
   }
