--- a/src/__mainTop.pug
+++ b/src/__mainTop.pug
@@ -48,7 +48,7 @@ mixin mainTop
               .mainTopLineBox__itemDesc Интернет-магазин профессиональной косметики
         .mainTopLineBox__rightOuter
           a.mainTopLineBox__rightLink1(href="")
-            img(src="assets/img/creative/m22-1200х150.jpg", alt="")
+            img(src="assets/img/creative/m22-1200х150-2.jpg", alt="")
           a.mainTopLineBox__rightLink2(href="")
             img(src="assets/img/creative/m22-600х150.jpg", alt="")
 
