--- a/src/__masters.pug
+++ b/src/__masters.pug
@@ -197,3 +197,9 @@ mixin mastersBox
         span.mastersBox__info
           span Шушпанникова Ирина Сергеевна
           span Управляющий имиджевым центром
+    .mastersBox__itemOuter.hidden(data-sid='62')
+      a.mastersBox__item(href='#')
+        img(src='assets/img/sotr/shelest-360х600.jpg' alt='')
+        span.mastersBox__info
+          span Шелухина Ирина
+          span Мега-маркетолог
