--- a/src/procedure3.pug
+++ b/src/procedure3.pug
@@ -34,7 +34,7 @@ body
     +breadcrumbs3
     .procedure3__introArea
       .procedure3__introOuter
-        .title3 
+        .title0 
           h1 Лазерная эпиляция Candela
         +procedure3__intro
     +wideBlock
@@ -54,6 +54,9 @@ body
             p
               strong Эта методика эксклюзивна тем, что подходит для любых зон лица и тела.
             p Суть работы данного лазера такова. Лазерная энергия, излучаемая аппаратом и проходящая по всей длине волоса, трансформируется в тепловую. Она разрушает волосяной фолликул, но при этом кожа вокруг не повреждается. Волосяная же луковица сгорает, следовательно, прекращается и рост волос.
+            a.aboutApparatus(href="") Про аппарат Ultera
+
+
 
           h2 Как проходит процедура
           p <strong>Эпиляция александритовым лазером Candela GentleLasePro-U</strong> проходит в 3 этапа. От правильности подготовки, манипуляций врача и последующего ухода в период восстановления, зависит окончательный результат.
