--- a/src/assets/css/__breadcrumbs.css
+++ b/src/assets/css/__breadcrumbs.css
@@ -48,6 +48,15 @@
 .breadcrumbs3__area {
   padding: 40px 0 30px;
 }
+
+.breadcrumbs3__wrapper {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 .breadcrumbs3 {
   display: block;
   overflow: hidden;
@@ -55,7 +64,7 @@
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  color: #4F4F4F;
+  color: #4f4f4f;
   font-size: 0.75rem;
   font-weight: 300;
   line-height: 1.2;
@@ -67,7 +76,7 @@
   margin: 0 5px;
 }
 .breadcrumbs3 div a {
-  color: #4F4F4F;
+  color: #4f4f4f;
   font-size: 0.75rem;
   font-weight: 400;
   line-height: 1.2;
@@ -88,4 +97,26 @@
   text-decoration: none;
   display: block;
   position: relative;
+}
+
+.backBtn3__outer {
+  display: none;
+  margin-left: auto;
+}
+
+.backBtn3 {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.backBtn3 i {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.backBtn3 span {
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  margin-left: 10px;
 }
