--- a/src/assets/css/__procedure3_media.css
+++ b/src/assets/css/__procedure3_media.css
@@ -37,6 +37,12 @@
     margin-top: 10px;
     padding: 0 0 0 20px;
   }
+  a.aboutApparatus {
+    font-size: 1rem;
+    border-radius: 4px;
+    margin: 30px auto 0;
+    padding: 10px 30px;
+  }
 }
 
 @media only screen and (max-width: 600px) {
