--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -66,6 +66,24 @@ body {
   margin: 0;
 }
 
+.title0 h1,
+.title0 h2,
+.title0 h3 {
+  margin: 0 0 20px;
+}
+
+.title2 h1,
+.title2 h2,
+.title2 h3 {
+  margin: 20px 0 0;
+}
+
+.title3 h1,
+.title3 h2,
+.title3 h3 {
+  margin: 0;
+}
+
 .title1margin0 h1,
 .title1margin0 h2,
 .title1margin0 h3 {
