--- a/src/assets/css/xandercode.css
+++ b/src/assets/css/xandercode.css
@@ -143,7 +143,7 @@ a.hover {
 
 .xScroll::-webkit-scrollbar-thumb {
   border-radius: 8px;
-  background-color: var(--tc0);
+  background-color: var(--brick);
 }
 
 .xScroll2::-webkit-scrollbar-track {
@@ -160,5 +160,5 @@ a.hover {
 
 .xScroll2::-webkit-scrollbar-thumb {
   border-radius: 8px;
-  background-color: var(--tc0);
+  background-color: var(--brick);
 }
