--- a/src/__master.pug
+++ b/src/__master.pug
@@ -1,5 +1,25 @@
 include __gallery
 
+mixin master3 
+  .master__area
+    .master__outer
+      .master3__page
+        .master3__top
+          .master3__topTitle
+            .master3__title Чумакова Ольга Владимировна
+            .master3__titleDesc Врач-косметолог
+          .master3__topContent
+
+
+
+
+
+
+
+
+
+
+
 mixin master
   .master__area.w0
     .master__outer.w1
