--- a/src/assets/css/__breadcrumbs.css
+++ b/src/assets/css/__breadcrumbs.css
@@ -29,12 +29,12 @@
   position: relative;
 }
 .breadcrumbs div a:hover {
-  color: var(--color1);
+  color: var(--reden);
   text-decoration: underline;
 }
 
 .breadcrumbs div span {
-  color: var(--color1);
+  color: var(--reden);
   font-size: 0.75rem;
   font-weight: 600;
   line-height: 1.2;
