--- a/src/assets/css/xandercode.css
+++ b/src/assets/css/xandercode.css
@@ -6,7 +6,7 @@
   --link1: #c24b35;
   --link1hov: #692604;
 
-  --tc0: #592004;
+  --tc0: #5d4b63;
   --tc0_light: #692604;
   --tc1: #2b2a29;
   --x1dark: #4b4b4b;
