--- a/src/master.pug
+++ b/src/master.pug
@@ -3,7 +3,7 @@
 - var seoDesc = 'Сео описание для страницы'
 
 include __const
-include __header
+include __header3
 include __menu
 include __breadcrumbs
 include __wideBlock
@@ -22,15 +22,14 @@ html(lang="ru-RU")
 body
 
   .site__header
-    +header
-    +topMenu
-    
+    +header3
+  
 
 
   .site__center
-    +breadcrumbs
-    //- +wideBlock
-    +master
+    +breadcrumbs3
+    +wideBlock
+    +master3
 
 
 
