--- a/src/assets/css/__master.css
+++ b/src/assets/css/__master.css
@@ -1,9 +1,13 @@
 .master__area {
   padding: 20px 0 0 0;
+  width: 100%;
 }
 
 .master__outer {
   position: relative;
+  width: 100%;
+  margin: 0 auto;
+  min-width: 1200px;
 }
 
 .master {
@@ -87,4 +91,40 @@
 
 .master__sertificats {
   margin-top: 20px;
+}
+
+/**************************************************/
+
+.master3__page {
+  display: flex;
+  flex-direction: column;
+}
+
+.master3__top {
+  width: 100%;
+  min-width: 1000px;
+  margin: 0 auto;
+  background: #fff;
+  box-shadow: 0px 12px 25px rgb(0 0 0 / 8%);
+  padding: 40px 60px;
+  display: flex;
+  flex-direction: column;
+}
+
+.master3__topTitle {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.master3__title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 2.25rem;
+  line-height: 3rem;
+  color: #333333;
+}
+
+.master3__titleDesc {
+  color: #828282;
 }
