--- a/src/__forms.pug
+++ b/src/__forms.pug
@@ -104,6 +104,33 @@ mixin formInMaster
         button.submit2(type='submit', name='submit2')
           | Записаться
 
+mixin formInMaster3
+  .mf3__area
+    .mf3__intro
+      h2 Запишитесь прямо сейчас на консультацию
+      span к нашему специалисту по телефону: 
+        a(href='tel:+78452260000') +7 (8452) 26-00-00
+      span или заполните форму ниже:
+    form.mf3(action='#')
+      label(for="name_mf3") Ваше имя
+      input.name_mf3(name='name_mf3', type='text', placeholder='')
+
+      label(for="phone_mf3") Ваш телефон
+      input.phone_mf3(name='phone_mf3', type='text', placeholder='')
+      //- input.email_mf3(name='email_mf3', type='text', placeholder='Email')
+      input.work_email_mf3(name='work_email_mf3', type='text', placeholder='Рабочий email')
+      //- textarea.message_mf3(name='message_mf3', cols='30', rows='10', placeholder='Ваше сообщение')
+      //- .form_mf3__text
+      //-   | *Отправляя сообщение Вы соглашаетесь с условиями 
+      //-   a(href='privacy-policy/', target='_blank')
+      //-     | политики
+      //-     | конфиденциальности
+      .form_mf3alrightBox
+        input.checkbox_mf3(type='checkbox' required='')
+        span Согласен на обработку персональных данных
+      button.submit_mf3(type='submit', name='submit_mf3')
+        | Записаться
+
 
 mixin formCallBack
   .formZ__area
