--- a/src/__master.pug
+++ b/src/__master.pug
@@ -1,4 +1,5 @@
 include __gallery
+include __forms
 
 mixin master3 
   .master__area
@@ -6,10 +7,65 @@ mixin master3
       .master3__page
         .master3__top
           .master3__topTitle
-            .master3__title Чумакова Ольга Владимировна
+            .master3__title
+              h1.mf3_subj Чумакова Ольга Владимировна
             .master3__titleDesc Врач-косметолог
           .master3__topContent
-
+            .master3__topContentLeft
+              img(src="assets/img/sotr/shelest-360х480.jpg", alt="")
+            .master3__topContentRight
+              .master3__formOuter
+                +formInMaster3
+        .master__specialization
+          .title1
+            h2 Специализация
+          .specialization__area
+            a.specialization(href="") Эпиляция
+            a.specialization(href="") Лазерная эпиляция
+            a.specialization(href="") Эпиляция
+            a.specialization(href="") Лазерная эпиляция
+            a.specialization(href="") Эпиляция
+            a.specialization(href="") Лазерная эпиляция
+            a.specialization(href="") Эпиляция
+            a.specialization(href="") Лазерная эпиляция
+            a.specialization(href="") Эпиляция
+            a.specialization(href="") Лазерная эпиляция
+        .master__aboutContent
+          .title1
+            h2 Основная информация
+          .content
+            h3 Основное образование
+            p Первый Санкт-Петербургский государственный медицинский университет им. акад. И. П. Павлова. Факультет: "Лечебное дело"
+            p Санкт-Петербургский государственный педиатрический медицинский университет. Ординатура по специальности "Дерматовенерология"
+            h3 Дополнительное образование
+            p Первый Санкт-Петербургский государственный медицинский университет им. акад. И.П. Павлова. Профессиональная переподготовка по специальности «Косметология». Курс профессора Аравийской Елены Александровны
+            h3 Повышение квалификации
+            ul
+              li Курс по применению препарата Диспорт в эстетической косметологии.
+              li Междисциплинарный подход к здоровью, возрасту красоте.
+              li Jalupro – биоревитализация нового поколения.
+              li Скинбустеры Restylane: векторный лифтинг, канюльные техники».
+              li Эстетический портфель Restylane: филлеры и скинбустеры.
+              li Теория и практика применения французских филлеров Филорга в эстетической медицине.
+              li Препарат Ксеомин – ботулинический нейротоксин типа А, свободный от комплексообразующих белков. Фармакология. Механизм действия. Методика введения.
+              li Техника введения препарата Belotero в области эстетической дерматологии.
+              li Мезотерапия. Применение препаратов Aesthetic Dermal.
+              li Международная Академия Syneron Candela (г. Санкт-Петербург).
+            ol
+              li Курс по применению препарата Диспорт в эстетической косметологии.
+              li Междисциплинарный подход к здоровью, возрасту красоте.
+              li Jalupro – биоревитализация нового поколения.
+              li Скинбустеры Restylane: векторный лифтинг, канюльные техники».
+              li Эстетический портфель Restylane: филлеры и скинбустеры.
+              li Теория и практика применения французских филлеров Филорга в эстетической медицине.
+              li Препарат Ксеомин – ботулинический нейротоксин типа А, свободный от комплексообразующих белков. Фармакология. Механизм действия. Методика введения.
+              li Техника введения препарата Belotero в области эстетической дерматологии.
+              li Мезотерапия. Применение препаратов Aesthetic Dermal.
+              li Международная Академия Syneron Candela (г. Санкт-Петербург).
+        .master__sertificats
+          .title3
+            h2 Дипломы и сертификаты
+          +sertif
 
 
 
