--- a/src/masters.pug
+++ b/src/masters.pug
@@ -4,7 +4,7 @@
 
 include __const
 include __header
-include __header2
+include __header3
 include __menu
 include __breadcrumbs
 include __wideBlock
@@ -26,13 +26,15 @@ html(lang="ru-RU")
 body
 
   .site__header
-    +header2
+    +header3
 
 
   .site__center
-    +breadcrumbs
-    +masters
-    +zBlock1
+    
+    +breadcrumbs3
+    +wideBlock
+    +masters3
+    +zBlock3
 
   .site__footer
     +footer
