--- a/src/assets/css/__master.css
+++ b/src/assets/css/__master.css
@@ -1,5 +1,5 @@
 .master__area {
-  padding: 20px 0 0 0;
+  padding: 40px 0 0 0;
   width: 100%;
 }
 
@@ -7,7 +7,7 @@
   position: relative;
   width: 100%;
   margin: 0 auto;
-  min-width: 1200px;
+  max-width: 1200px;
 }
 
 .master {
@@ -68,24 +68,27 @@
 
 .specialization__area {
   display: flex;
-  /* flex-direction: column; */
   flex-wrap: wrap;
   margin: 0 -5px;
 }
 
 .specialization {
   display: flex;
-  padding: 5px 10px;
+  padding: 10px 30px;
   margin: 5px;
-  background: var(--x1greySuperLight);
-  color: var(--tc0);
   text-decoration: none;
-  font-size: 1rem;
   transition: all 0.3s;
+  border: 1px solid #e0e0e0;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: #4f4f4f;
+  border-radius: 50px;
 }
 
 .specialization:hover {
-  background: var(--link1);
+  background: var(--brick);
+  border: 1px solid var(--brick);
   color: #fff;
 }
 
@@ -102,8 +105,8 @@
 
 .master3__top {
   width: 100%;
-  min-width: 1000px;
-  margin: 0 auto;
+  max-width: 1000px;
+  margin: 0 auto 20px;
   background: #fff;
   box-shadow: 0px 12px 25px rgb(0 0 0 / 8%);
   padding: 40px 60px;
@@ -118,13 +121,46 @@
 }
 
 .master3__title {
+  margin-bottom: 10px;
+}
+
+.master3__title h1 {
   font-style: normal;
   font-weight: bold;
   font-size: 2.25rem;
   line-height: 3rem;
   color: #333333;
+  margin: 0;
 }
 
 .master3__titleDesc {
   color: #828282;
+  font-size: 1.125rem;
+  line-height: 1.5rem;
+  margin-bottom: 20px;
+}
+
+.master3__topContent {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.master3__topContentLeft {
+  width: 50%;
+  padding: 0 20px 0 0;
+}
+
+.master3__topContentLeft img {
+  width: 100%;
+  max-width: 360px;
+}
+
+.master3__topContentRight {
+  width: 50%;
+  padding: 0 0 0 20px;
+}
+
+.master3__formOuter {
+  width: 100%;
+  max-width: 380px;
 }
