--- a/src/assets/css/__masters.css
+++ b/src/assets/css/__masters.css
@@ -19,13 +19,13 @@
 
 .mastersBox {
   display: flex;
-  margin: 0 -5px;
+  margin: 0 -10px;
   flex-wrap: wrap;
 }
 
 .mastersBox__itemOuter {
   width: 25%;
-  padding: 5px;
+  padding: 10px;
 }
 
 .mastersBox__itemOuter.hidden {
@@ -37,43 +37,65 @@
 }
 
 .mastersBox__item {
-  display: block;
   position: relative;
   text-decoration: none;
+  transition: all 0.3s;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
-.mastersBox__item img {
+.mastersBox__itemImg {
+  width: 100%;
+}
+.mastersBox__itemImg img {
   display: block;
   width: 100%;
 }
-
-.mastersBox__info {
-  position: absolute;
+.mastersBox__itemInfo {
+  padding: 30px;
   width: 100%;
-  height: 20%;
-  left: 0;
-  bottom: 0;
-  background: rgba(255, 255, 255, 0.7);
-  padding: 10px;
+  background: rgba(255, 255, 255, 1);
   display: flex;
   flex-direction: column;
   justify-content: center;
   transition: all 0.3s;
+  flex: 1;
+}
+.mastersBox__itemInfoTitle {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 24px;
+  color: #4f4f4f;
+  padding: 0 0 1rem 0;
+  display: block;
+  position: relative;
+  transition: all 0.3s;
+}
+.mastersBox__itemInfoTitle:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 30%;
+  height: 2px;
+  background: #4f4f4f;
+}
+.mastersBox__item:hover .mastersBox__itemInfoTitle {
+  color: var(--reden);
+}
+.mastersBox__item:hover {
+  box-shadow: 0px 10px 20px rgb(0 0 0 / 8%);
 }
 
-.mastersBox__item:hover .mastersBox__info {
-  background: rgba(255, 255, 255, 0.9);
-}
-
-.mastersBox__info span {
-  color: var(--tc0);
-  font-size: 1rem;
-  text-align: center;
-  margin-bottom: 5px;
-}
-.mastersBox__info span:last-child {
-  font-size: 0.875rem;
-  margin-bottom: 0;
+.mastersBox__itemInfoDesc {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+  color: #4f4f4f;
+  padding: 1rem 0 0 0;
 }
 
 .masterBox__content {
